Add AOC 2017 Day 24 solution: Electromagnetic Moat - DFS for strongest and longest bridge